# powertabeditor

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTACT.md  CONTRIBUTING.md  Doxyfile  README.md  Run-CMakeBuild.ps1  appveyor.yml  cmake-build.ps1  common.pri  get-dependencies.ps1  linking.pri  midifile.cpp  powertabeditor.cpp  powertabeditor.h  powertabeditor.pro
installer/: CMakeLists.txt  license.rtf
installer/osx/: CMakeLists.txt  sign.cmake  sign_bundle.cmake  sign_dmg.cmake
installer/snap/: snapcraft.yaml
installer/windows/: README.md  common.wxi  installer.iss  installer.wixproj  installer.wxs  powertabeditor.wixproj  powertabeditor.wxs
source/: CMakeLists.txt  README  documentmanager.cpp  documentmanager.h  main.cpp  midiplayer.cpp  midiplayer.h  musicfont.cpp  musicfont.h  powertabeditor.cpp  powertabeditor.h  powertabeditor.pro  resources.qrc  rtmidiwrapper.cpp  rtmidiwrapper.h  scorearea.cpp  scorearea.h  skinmanager.cpp  skinmanager.h  source.pro  toolbox.cpp  toolbox.h
source/actions/: CMakeLists.txt  actions.pro  actions_pch.h  addalternateending.cpp  addalternateending.h  addartificialharmonic.cpp  addartificialharmonic.h  addbarline.cpp  addbarline.h  addchordtext.cpp  addchordtext.h  adddirection.cpp  adddirection.h  adddynamic.cpp  adddynamic.h  addguitar.cpp  addguitar.h  addinstrument.cpp  addinstrument.h  addirregulargrouping.cpp  addirregulargrouping.h  addmultibarrest.cpp  addmultibarrest.h  addmusicaldirection.cpp  addmusicaldirection.h  addnote.cpp  addnote.h  addnoteproperty.cpp  addnoteproperty.h  addplayer.cpp  addplayer.h  addplayerchange.cpp  addplayerchange.h  addpositionproperty.cpp  addpositionproperty.h  addrehearsalsign.cpp  addrehearsalsign.h  addrest.cpp  addrest.h  addspecialnoteproperty.h  (+147 more)
source/app/: CMakeLists.txt  app.pro  appinfo.cpp  appinfo.h  autobackup.cpp  autobackup.h  caret.cpp  caret.h  clipboard.cpp  clipboard.h  command.cpp  command.h  common.h  documentmanager.cpp  documentmanager.h  log.h  options.cpp  options.h  paths.cpp  paths.h  powertabeditor.cpp  powertabeditor.h  recentfiles.cpp  recentfiles.h  resources.qrc  scorearea.cpp  scorearea.h  scoreclickevent.h  settings.cpp  settings.h  settingsmanager.cpp  settingsmanager.h  skinmanager.cpp  skinmanager.h  tuningdictionary.cpp  tuningdictionary.h  viewoptions.cpp  viewoptions.h
source/audio/: CMakeLists.txt  audio.pro  audio_pch.h  bendevent.cpp  bendevent.h  directionsymbol.cpp  directionsymbol.h  letringevent.cpp  letringevent.h  metronomeevent.cpp  metronomeevent.h  midievent.cpp  midievent.h  midioutputdevice.cpp  midioutputdevice.h  midiplayer.cpp  midiplayer.h  midisoftwaresynth.cpp  midisoftwaresynth.h  playnoteevent.cpp  playnoteevent.h  repeat.cpp  repeat.h  repeatcontroller.cpp  repeatcontroller.h  restevent.cpp  restevent.h  rtmidiwrapper.cpp  rtmidiwrapper.h  settings.cpp  settings.h  stopnoteevent.cpp  stopnoteevent.h  vibratoevent.cpp  vibratoevent.h  volumechangeevent.cpp  volumechangeevent.h
source/data/: CMakeLists.txt  tunings.json
source/dialogs/: CMakeLists.txt  alterationofpacedialog.cpp  alterationofpacedialog.h  alterationofpacedialog.ui  alternateendingdialog.cpp  alternateendingdialog.h  artificialharmonicdialog.cpp  artificialharmonicdialog.h  artificialharmonicdialog.ui  barlinedialog.cpp  barlinedialog.h  barlinedialog.ui  benddialog.cpp  benddialog.h  benddialog.ui  bulkconverterdialog.cpp  bulkconverterdialog.h  bulkconverterdialog.ui  chorddiagramdialog.cpp  chorddiagramdialog.h  chorddiagramdialog.ui  chordnamedialog.cpp  chordnamedialog.h  chordnamedialog.ui  crashdialog.cpp  crashdialog.h  crashdialog.ui  dialogs.pro  dialogs_pch.h  directiondialog.cpp  directiondialog.h  directiondialog.ui  dynamicdialog.cpp  dynamicdialog.h  dynamicdialog.ui  fileinformationdialog.cpp  fileinformationdialog.h  fileinformationdialog.ui  filterrulewidget.cpp  filterrulewidget.h  (+76 more)
source/formats/: CMakeLists.txt  fileformat.cpp  fileformat.h  fileformatmanager.cpp  fileformatmanager.h  formats.pro  scorearranger.cpp  scorearranger.h
source/midi/: CMakeLists.txt  midievent.cpp  midievent.h  midieventlist.cpp  midieventlist.h  midifile.cpp  midifile.h  repeatcontroller.h
source/painters/: CMakeLists.txt  antialiasedpathitem.cpp  antialiasedpathitem.h  barlinepainter.cpp  barlinepainter.h  beamgroup.cpp  beamgroup.cpp.orig  beamgroup.h  beamgroup.h.orig  caret.cpp  caret.h  caretpainter.cpp  caretpainter.h  chorddiagrampainter.cpp  chorddiagrampainter.h  chordtextpainter.cpp  chordtextpainter.h  clefpainter.cpp  clefpainter.h  clickablegroup.cpp  clickablegroup.h  clickableitem.cpp  clickableitem.h  directionpainter.cpp  directionpainter.h  directions.cpp  irregularnotegroup.cpp  irregularnotegroup.h  keysignaturepainter.cpp  keysignaturepainter.h  layoutinfo.cpp  layoutinfo.h  musicfont.cpp  musicfont.h  notestem.cpp  notestem.h  painterbase.h  painters.pro  precompiled.h  restpainter.cpp  (+33 more)
source/powertabdocument/: CMakeLists.txt  alternateending.cpp  alternateending.h  barline.cpp  barline.h  chorddiagram.cpp  chorddiagram.h  chordname.cpp  chordname.h  chordtext.cpp  chordtext.h  colour.cpp  colour.h  common.h  complexsymbolarray.h  direction.cpp  direction.h  dynamic.cpp  dynamic.h  floatingtext.cpp  floatingtext.h  fontsetting.cpp  fontsetting.h  generalmidi.cpp  generalmidi.h  guitar.cpp  guitar.h  guitarin.cpp  guitarin.h  harmonics.cpp  harmonics.h  keysignature.cpp  keysignature.h  layout.cpp  layout.h  macros.cpp  macros.h  (+44 more)
test/: CMakeLists.txt  README  catch.hpp  precompiled.cpp  precompiled.h  test.pro  test_main.cpp  test_pch.h
translations/: CMakeLists.txt  en.ts  powertabeditor_de.ts  powertabeditor_en.ts  powertabeditor_en_CA.ts  powertabeditor_es.ts  powertabeditor_fr.ts  powertabeditor_it.ts  powertabeditor_ja.ts  powertabeditor_nb_NO.ts  powertabeditor_nl.ts  powertabeditor_ru.ts  powertabeditor_ta.ts  powertabeditor_tr.ts  powertabeditor_zh_Hans.ts
xdg/: CMakeLists.txt  mimeinfo.xml  powertabeditor.desktop  powertabeditor.metainfo.xml
(+523 files in other folders)
