add_subdirectory( actions )
add_subdirectory( app )
add_subdirectory( audio )
add_subdirectory( data )
add_subdirectory( dialogs )
add_subdirectory( formats )
add_subdirectory( midi )
add_subdirectory( painters )
add_subdirectory( score )
add_subdirectory( widgets )
add_subdirectory( util )

add_subdirectory( build )
