cmake_minimum_required(VERSION 2.8.9)

add_library(pteactions
    addalternateending.cpp
    addartificialharmonic.cpp
    addbarline.cpp
    addchordtext.cpp
    adddirection.cpp
    adddynamic.cpp
    #addguitar.cpp
    addirregulargrouping.cpp
    addmultibarrest.cpp
    addnote.cpp
    addnoteproperty.cpp
    addplayer.cpp
    addplayerchange.cpp
    addpositionproperty.cpp
    addrehearsalsign.cpp
    addrest.cpp
    addstaff.cpp
    addsystem.cpp
    addtappedharmonic.cpp
    addtempomarker.cpp
    addtrill.cpp
    #addvolumeswell.cpp
    adjustlinespacing.cpp
    #changepositionspacing.cpp
    editbarline.cpp
    editclef.cpp
    editfileinformation.cpp
    editinstrument.cpp
    editkeysignature.cpp
    editnoteduration.cpp
    editplayer.cpp
    edittabnumber.cpp
    edittimesignature.cpp
    insertnotes.cpp
    removealternateending.cpp
    removeartificialharmonic.cpp
    removebarline.cpp
    removechordtext.cpp
    removedirection.cpp
    removedynamic.cpp
    removeirregulargrouping.cpp
    removenote.cpp
    removenoteproperty.cpp
    removeplayer.cpp
    removeplayerchange.cpp
    removeposition.cpp
    removepositionproperty.cpp
    removerehearsalsign.cpp
    removestaff.cpp
    removesystem.cpp
    removetappedharmonic.cpp
    removetempomarker.cpp
    removetrill.cpp
    #removevolumeswell.cpp
    shiftpositions.cpp
    #shifttabnumber.cpp
    undomanager.cpp

    addalternateending.h
    addartificialharmonic.h
    addbarline.h
    addchordtext.h
    adddirection.h
    adddynamic.h
    #addguitar.h
    addirregulargrouping.h
    addmultibarrest.h
    addnote.h
    addnoteproperty.h
    addplayer.h
    addplayerchange.h
    addpositionproperty.h
    addrehearsalsign.h
    addrest.h
    addstaff.h
    addsystem.h
    addtappedharmonic.h
    addtempomarker.h
    addtrill.h
    #addvolumeswell.h
    adjustlinespacing.h
    #changepositionspacing.h
    editbarline.h
    editclef.h
    editfileinformation.h
    editinstrument.h
    editkeysignature.h
    editnoteduration.h
    editplayer.h
    edittabnumber.h
    edittimesignature.h
    insertnotes.h
    removealternateending.h
    removeartificialharmonic.h
    removebarline.h
    removechordtext.h
    removedirection.h
    removedynamic.h
    removeirregulargrouping.h
    removenote.h
    removenoteproperty.h
    removeplayer.h
    removeplayerchange.h
    removeposition.h
    removepositionproperty.h
    removerehearsalsign.h
    removestaff.h
    removesystem.h
    removetappedharmonic.h
    removetempomarker.h
    removetrill.h
    #removevolumeswell.h
    shiftpositions.h
    #shifttabnumber.h
    undomanager.h
)

qt5_use_modules(pteactions Widgets)
cotire(pteactions)
